<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BBF2013</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_beer_list">BeerListActivity</string>
    <string name="title_activity_details">DetailsActivity</string>
	<string name="wishlist">Wish List</string>
	<string name="mydrinks">My Drinks</string>
	<string name="beerlist">Beer List</string>
	<string name="details">Beer Details</string>
	<string name="mywishlist">My Wishlist</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
    
</resources>