<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textTitolo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="23rd Battersea\nBeer Festival"
        android:textAppearance="?android:attr/textAppearanceLarge"
     	android:textStyle="bold"
     	android:gravity="center"
        android:textSize="30sp"
        
    	android:layout_marginTop="15dip"
        />

    <ImageView
        android:id="@+id/imgHome"
        android:layout_width="fill_parent"
        android:layout_height="150dip"
        android:layout_marginTop="15dip"
        android:layout_marginBottom="15dip"
        android:src="@drawable/savepubs" />

    <TextView
        android:id="@+id/textListAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5sp"
        android:text="@string/beerlist"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textWishlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5sp"
        android:text="@string/mywishlist"
        android:textSize="25sp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textMyDriks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5sp"
        android:text="@string/mydrinks"
        android:textSize="25sp"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    <!--  
     <TextView
        android:id="@+id/textInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5sp"
        android:text="Info"
        android:textSize="25sp"
        android:textAppearance="?android:attr/textAppearanceLarge" />
	-->
</LinearLayout>